# uMiniLessons

./: .gitignore  README.md  main.py  pyproject.toml
agent/: agent_langgraph.py
agent/data/: index.html  test_prompt.py
datasets_build/: test_distlabel.py
llm/: A_step_by_step_guide_of_training_ReFT_with_TinyLlama.py  prompts.py  qwen_peft_fine_tune.py
ocr/: lesson_ocr_engine_wingdings.py
rag/: clPali_qwen2_VL.py  colpali_test.py  encoder.py  llm_api.py
vlm/: fine_tune_paliGemma.py  fine_tune_phi_vision.py
