[tool.poetry]
name = "umimilessons"
version = "0.01"
description = ""
authors = ["WALL-AI <gaojing850063636@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pandas = "^2.2.3"
numpy = "1.26.4"
pillow = "10.4.0"
matplotlib = "^3.9.3"
transformers = "4.46.1"
scikit-learn = "^1.5.2"
torch = "^2.5.1"
peft = "0.11.0"
datasets = "^3.1.0"
swanlab = "^0.3.28"
pdf2image = "^1.17.0"
qwen-vl-utils = "^0.0.8"
byaldi = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
